--- a/src/pages/libro/[id].astro
+++ b/src/pages/libro/[id].astro
@@ -19,6 +19,8 @@ const { book } = Astro.props;
 const { data, slug } = book;
 const { title, author, buy, description, img, readtime } = data;
 const { Content } = await render(book);
+
+export const prerender = true;
 ---
 
 <Layout title={title + author}>
