--- a/src/pages/libro/[id].astro
+++ b/src/pages/libro/[id].astro
@@ -20,7 +20,7 @@ const { data, slug } = book;
 const { title, author, buy, description, img, readtime } = data;
 const { Content } = await render(book);
 
-// export const prerender = true;
+export const prerender = true;
 ---
 
 <Layout title={title + author}>
